# silk-lang

./: .coverage  .gitignore  README.md  SILK_VISION.md  pyproject.toml
cli/: silk_cli.py
docs/plans/: 2026-02-05-silk-phase0-phase1-implementation.md  2026-02-06-silk-phase2-module-system.md
examples/: patient_assessment.silk  test_dosing.silk
files/: README.md  demo.silk  medical.silk  silk.py
src/silk/: __init__.py  ast.py  cli.py  errors.py  interpreter.py  interpreter_members.py  lexer.py  parser.py  parser_types.py  resolver.py  tokens.py
src/silk/builtins/: __init__.py  core.py  medical.py  (+1 more)
tests/: __init__.py  conftest.py  test_array_access.py  test_array_accumulate.py  test_array_adjacentdiff.py  test_array_adjacentpairs.py  test_array_advanced.py  test_array_aliases.py  test_array_allequal.py  test_array_aperture.py  test_array_aperturepairs.py  test_array_associate.py  test_array_average.py  test_array_chunk.py  test_array_chunkby.py  test_array_collectmap.py  test_array_combinations.py  test_array_compact.py  test_array_countby.py  test_array_countof.py  test_array_countright.py  test_array_crossproduct.py  test_array_cumulativesum.py  test_array_cycle.py  test_array_dedup.py  test_array_difference.py  test_array_dotproduct.py  test_array_dropfirst.py  test_array_dropright.py  test_array_dropwhile.py  test_array_dropwhileright.py  test_array_duplicates.py  test_array_everyindexed.py  test_array_everynth.py  test_array_extra.py  test_array_fillcycle.py  test_array_filled.py  test_array_filterindexed.py  test_array_filtermapindexed.py  test_array_filterright.py  (+2441 more)
tests/golden/: basic.expected  basic.silk  dosing_lib.silk  loops.silk  medical.silk  modules.expected  modules.silk  testing.expected  testing.silk  types.expected  types.silk
tests/test_types/: test_decimal.py  test_enum.py  test_impl.py  test_interface.py  test_match.py  test_option.py  test_result.py  test_struct.py  test_unit.py
vscode-silk/: package-lock.json  package.json  tsconfig.json
vscode-silk/src/: extension.ts
vscode-silk/syntaxes/: silk.tmLanguage.json
(+6 files in other folders)
